--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -5,9 +5,9 @@
 
 This thesis is in the realm of formal verification, i.e. the attempt to verify a system by the use of formal methods such as SAT solvers, interactive theorem provers and model checkers.
 With these tools, formal verification engineers strive to prove the correctness of systems such as general computer programs, \glspl{os}, compilers or hardware designs.
-Often times, for a system to be correct means that it complies with a specification.
-Formal verification of a system then is the attempt to prove that some system is free of errors, i.e. meets all properties imposed by some specification.
-\enquote{Specification} here might reference to large documents specifying standards of the industry, but it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
+For a system to be correct means that it complies with a specification.
+Formal verification of a system is the attempt to prove that some system is free of errors, i.e. meets all properties imposed by some specification.
+\enquote{Specification} here might reference to documents specifying standards of the industry, but it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
 Thus, formal verification complements testing.
 The relation between these two approaches often is illustrated by a famous quote of Edsger Dijkstra:
 \begin{displaycquote}[p.6]{Dijkstra72}
